--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
 }
@@ -10,6 +14,15 @@ h1 {
   text-shadow: 0cqi;
   padding: 0cap;
 }
+
+h2 { 
+  colour: e0ded7;
+}
+
+p {
+}
+
+
 
 
 
