Add styles for span and div elements

--- a/style.css
+++ b/style.css
@@ -34,6 +34,15 @@ p {
   color: red;
   background-color: green;
 }
+span {
+  display: inline;
+  background: #fde68a;
+}
+div {
+  display: block;
+  background: #bfdbfe;
+  margin-top: 8px;
+}
 
 
 
