--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 * {
   box-sizing: border-box;
-}
+   div {
+  width: 300px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
+      }
+  }
 
 h1 { 
   color: #f2e312;
@@ -22,7 +28,7 @@ h2 {
   text-size-adjust :11px;
 }
 
-#lname-req {
+#fname-req {
   font-size: 10px;
   font-famiy: wingding;
   color: #c4126b;
@@ -37,6 +43,12 @@ h2 {
   font-size : 32px;
 }
 
+#lname-req {
+  font-size: 10px;
+  font-famiy: times new roman;
+  color: #c4126b;
+}
+
 #uname {
   color: #524d07;
   text-align: right;
@@ -46,6 +58,12 @@ h2 {
   font-size : 32px;
 }
 
+text {
+  font-size: 6px;
+  font-famiy: calibri;
+  color: #c4126b;
+}
+
 #random-btn {
   color: #524d07;
   text-align: left;
@@ -53,6 +71,8 @@ h2 {
   text-shadow: 0cqi;
   padding: 0cap;
   font-size : 32px;
+  color: red;
+  background-color: green;
 }
 
 #text {
@@ -74,15 +94,6 @@ h2 {
   font-size : 32px;
 }
 
-#fname-req {
-  text-size: 10px;
-  color: #e0ded7;
-}
-
-#random-btn {
-  color: red;
-  background-color: green;
-}
 span {
   display: inline;
   background: #fde68a;
