--- a/style.css
+++ b/style.css
@@ -118,3 +118,9 @@ img {
 img:hover {
   transform: scale(1.15);
 }
+input {
+   transition: transform 0.6s ease;
+}
+input:hover {
+   transform: rotate(360deg);
+}
