--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ background-image:  repeating-linear-gradient(45deg, #444cf7 25%, transparent 25%
 background-position: 0 0, 10px 10px;
 background-size: 20px 20px;
 }
+
 h1 { 
   color: #f2e312;
   background: white;
@@ -34,6 +35,7 @@ h2 {
 #fname {
   text-decoration: underline;
   text-size-adjust :11px;
+  width: 3000px;
 }
 
 #fname-req {
