--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
 background-image:  repeating-linear-gradient(45deg, #444cf7 25%, transparent 25%, transparent 75%, #444cf7 75%, #444cf7), repeating-linear-gradient(45deg, #444cf7 25%, #e5e5f7 25%, #e5e5f7 75%, #444cf7 75%, #444cf7);
 background-position: 0 0, 10px 10px;
 background-size: 20px 20px;
+  width: 6000px;
+  overflow-x: auto;
 }
 
 h1 { 
@@ -36,6 +38,7 @@ h2 {
   text-decoration: underline;
   text-size-adjust :11px;
   width: 3000px;
+  text-align: right;
 }
 
 #fname-req {
