--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 h1 { 
   color: #f2e312;
   background: white;
-  text-align: right;
+  text-align: 18%;
   font-family: cursive, dingbats;
   text-shadow: 0cqi;
   padding: 6cap;
@@ -29,7 +29,7 @@ h1 {
 
 h2 { 
   color: red;
-  text-align: center;
+  text-align: 30%;
   padding-left: 100px;
   background: white;
 }
