Fix margin property syntax in style.css

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   background-position: 0 0, 10px 10px;
   background-size: 20px 20px;
   position: relative;
+  margin: left 5px;
     }
 
 h1 { 
