--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ text {
   padding: 0cap;
   font-size : 32px;
   color: red;
-  background-color: green;
+  background-color: light blue;
 }
 
 #text {
