--- a/style.css
+++ b/style.css
@@ -142,17 +142,15 @@ input:hover {
 }
 
 .random_butt {
-  color: #524d07;
+  color: red;
   text-align: left;
   font-family: cursive;
   text-shadow: 0cqi;
   font-size : 32px;
-  background-color: green;
+  background-color: lightblue;
   position: absolute;
   padding: 10px 20px;
-  background-color: lightblue;
   border: none;
   cursor: pointer;
-  color: red;
-  background-color: green;
+  text-color: red;
 }
